--- a/views/capturar_embarque.ejs
+++ b/views/capturar_embarque.ejs
@@ -150,7 +150,7 @@
                                             </h4>
                          
                                             <input type="text" class="form-control ;" name="indestino" id="indestino"
-                                                value="" required>
+                                                value="" autocomplete="off" required>
                                             <br>
                                        
                                     </div>
