--- a/views/capturar_embarque.ejs
+++ b/views/capturar_embarque.ejs
@@ -53,7 +53,7 @@
                             </span>
                         </h4>
                         <input type="text" class="form-control" id="serial" name="serial" value=""
-                            onkeyup="this.value = this.value.toUpperCase();" required>
+                            onkeyup="this.value = this.value.toUpperCase();" autocomplete="off" required>
                     </div>
 
                     <div class="form-group col-lg-4">
@@ -70,7 +70,7 @@
                         </h4>
 
                         <input type="text" class="form-control" id="parte" name="parte" value=""
-                            onkeyup="this.value = this.value.toUpperCase();" required>
+                            onkeyup="this.value = this.value.toUpperCase();" autocomplete="off" required>
                     </div>
 
 
@@ -87,7 +87,7 @@
                             </span>
                         </h4>
                         <input type="text" class="form-control" id="cantidad" name="cantidad" value=""
-                            onkeyup="this.value = this.value.toUpperCase();" required>
+                            onkeyup="this.value = this.value.toUpperCase();" autocomplete="off" required>
                     </div>
 
 
