--- a/views/capturar_embarque.ejs
+++ b/views/capturar_embarque.ejs
@@ -113,7 +113,7 @@
                     <div class="modal-content">
                         <div class="modal-header text-center">
                             <h3 class="modal-title " id="myModalLabel"> <span
-                                    class="text-success fas fa-plane-departure"></span> Etiqueta de Destino</h3>
+                                    class="text-success fas fa-truck"></span> Etiqueta de Destino</h3>
                             </h2>
                         </div>
 
