--- a/views/capturar_embarque.ejs
+++ b/views/capturar_embarque.ejs
@@ -1143,21 +1143,21 @@
 
                 ///////////MASTER FORD///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-                ///////////MASTER FORD///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                ///////////MASTER VWWW///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-             else if (infoArray.length == 19) {//FORD
+             else if (infoArray.length == 19) {//VW
                     var partes
                     var qty
                     var serial
 
-                    $('#parte').val(infoArray[1].substring(1));
-                    $('#cantidad').val(infoArray[2].substring(1));
-                    $('#serial').val(infoArray[7].substring(1));
+                    $('#parte').val((infoArray[14].substring(1)).trim());
+                    $('#cantidad').val(infoArray[17].substring(2,infoArray[17].length - 2));
+                    $('#serial').val(infoArray[2]);
 
 
                     
-                    partes = $('#parte').val()
+                    partes = ($('#parte').val())
                     qty = $('#cantidad').val()
                     serial = $('#serial').val()
 
@@ -1171,7 +1171,7 @@
 
                     for (let y = 0; y < programa.length; y++) {
 
-                        if (partes == programa[y].programa_parte) {
+                        if (partes == (programa[y].programa_parte)) {
 
                             existeParte = true;
                         }
@@ -1289,7 +1289,172 @@
                     //Lastttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt
                 }
 
-                ///////////MASTER FORD///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                ///////////MASTER VWWW///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+                ///////////MASTER VW PUEBLAAAAA///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+             else if (infoArray.length == 17) {//VW
+                    var partes
+                    var qty
+                    var serial
+
+                    $('#parte').val((infoArray[14].substring(1)).trim());
+                    $('#cantidad').val(infoArray[11].substring(1));
+                    $('#serial').val(infoArray[15]);
+
+
+                    
+                    partes = ($('#parte').val())
+                    qty = $('#cantidad').val()
+                    serial = $('#serial').val()
+
+                    console.log(partes)
+                    console.log(qty)
+                    console.log(serial)
+
+
+                    //PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
+                    existeParte = false;
+
+                    for (let y = 0; y < programa.length; y++) {
+
+                        if (partes == (programa[y].programa_parte)) {
+
+                            existeParte = true;
+                        }
+
+                    }
+
+
+
+                    if (existeParte == false) {
+                        //soundWrong();
+                        $('#lblparte2').show();
+                        $('#btnguardar').prop("disabled", true);
+                        msg.innerHTML = ' No Encontrado';
+                        parteT.classList.remove('border-success');
+                        msg.classList.remove('text-success');
+                        msg.classList.add('text-dark');
+                        parteT.classList.add('border-dark');
+                        $('#parte').val("");
+                        $('#serial').val("");
+                        $('#cantidad').val("");
+                    }
+                    //PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP
+                    //SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
+                    existeSerial = false;
+                    seriales = <%- JSON.stringify(data3) %>;
+                    var msgS = document.getElementById("lblserial");
+                    var seriali = document.getElementById("serial");
+
+                    var id = $('#serial').val();
+
+
+                    for (var i = 0; i < seriales.length; i++) {
+                        if (serial == seriales[i].captura_serial) {
+                            existeSerial = true;
+                        }
+                    }
+
+                    if (existeSerial == true) {
+                        //soundWrong();
+                        $('#lblserial2').show();
+                        $('#btnguardar').prop("disabled", true);
+                        msgS.innerHTML = ' Ya registrado';
+                        seriali.classList.remove('border-success');
+                        msgS.classList.remove('text-success');
+                        msgS.classList.add('text-dark');
+                        seriali.classList.add('border-dark');
+                        $('#parte').val("");
+                        $('#serial').val("");
+                        $('#cantidad').val("");
+                    }
+                    //SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
+                    //CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
+                    existeCantidad = false
+                    programa = <%- JSON.stringify(data) %>;
+                    var msgC = document.getElementById("lblcant");
+                    var canti = document.getElementById("cantidad");
+
+                    for (var i = 0; i < programa.length; i++) {
+
+
+                        qtyInt = parseInt(qty);
+
+                        if (partes == programa[i].programa_parte && qtyInt > (programa[i].programa_cant - programa[i].programa_capt)) {
+
+                            existeCantidad = true
+
+                        }
+
+
+                    }
+
+                    if (existeCantidad == true) {
+                        //soundWrong();
+                        $('#lblcant2').show();
+                        $('#btnguardar').prop("disabled", true);
+                        msgC.innerHTML = ' Cantidad Excedente';
+                        canti.classList.remove('border-success');
+                        msgC.classList.remove('text-success');
+                        msgC.classList.add('text-dark');
+                        canti.classList.add('border-dark');
+                        $('#parte').val("");
+                        $('#serial').val("");
+                        $('#cantidad').val("");
+                    }
+                    //CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
+                    //Lastttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt
+                    p = $('#parte').val();
+                    s = $('#serial').val();
+                    c = $('#cantidad').val();
+                    if (p != "" && s != "" && c != "") {
+
+                        $('#btnguardar').prop("disabled", false);
+                        msg.innerHTML = '';
+                        $('#lblparte2').hide();
+                        parteT.classList.remove('border-dark');
+                        msg.classList.add('text-success');
+                        parteT.classList.add('border-success');
+
+
+                        $('#lblserial2').hide();
+                        $('#btnguardar').prop("disabled", false);
+                        msgS.innerHTML = '';
+                        seriali.classList.remove('border-dark');
+                        msgS.classList.add('text-success');
+                        seriali.classList.add('border-success');
+
+                        $('#lblcant2').hide();
+                        $('#btnguardar').prop("disabled", false);
+                        msgC.innerHTML = '';
+                        canti.classList.remove('border-dark');
+                        msgC.classList.add('text-success');
+                        canti.classList.add('border-success');
+
+                    }
+                    //Lastttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt
+                }
+
+                ///////////MASTER VWWW PUEBLAAA///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+
+
+
+
+
+
+
+
+
+                
 
                 count = 0;
                 info = "";
