--- a/views/cambiar_embarque.ejs
+++ b/views/cambiar_embarque.ejs
@@ -40,7 +40,7 @@
                             <%
                             if(data[i].programa_capt>0) { 
              
-                                classHide="disabled"
+                                classHide=""
                                 txtTitle="Ya Capturado"
                                 
                              }else{ 
