--- a/views/revisar_cierre.ejs
+++ b/views/revisar_cierre.ejs
@@ -32,6 +32,7 @@
 
 
                     <img class="d-block w-100" src="/uploads/<%= embarque%>.jpg">
+                   
                 <!------->
 
         </form>
@@ -43,3 +44,8 @@
 </body>
 
 </html>
+
+<script>
+     console.log(embarque)
+   
+</script>
