--- a/views/static/footer.ejs
+++ b/views/static/footer.ejs
@@ -10,4 +10,4 @@
 <script type="text/javascript" src="/resources/datepickerBootstrap/js/bootstrap-datepicker.min.js"></script>
 <script lang="javascript" src="/js/xlsx.full.min.js"></script>
 <script type="text/javascript" src="/js/sounds.js"></script>
-<script type="text/javascript" src="/axios/dist/axios.min.js"></script>
+<!-- <script type="text/javascript" src="/axios/dist/axios.min.js"></script> -->
