--- a/views/revisar_cierre.ejs
+++ b/views/revisar_cierre.ejs
@@ -31,7 +31,7 @@
                     </div>
 
 
-                    <img class="d-block w-100" src="/uploads/<%= embarque%>.jpg">
+                    <img class="d-block w-100" src="/../<%= embarque%>.jpg">
                    
                 <!------->
 
