--- a/views/embarques.ejs
+++ b/views/embarques.ejs
@@ -20,12 +20,11 @@
     </div>
 
 </div>
-<div class="table-responsive">
-    <div class="containerTable">
-        <!-- /.box-header -->
-        <div class="table table-responsive" id="table">
-            <table id="myTable" class="table table-bordered table-striped table-sm">
-                <thead class="thead-dark">
+
+<div class="container-fluid">
+    <div class="table table-responsive" >
+        <table id="myTabl2" class="table table-bordered table-striped" style="display:none">
+            <thead class="thead-dark">
 
                     <th><span class="icoSidebar fas fa-history"></span> Revisar</th>
                     <th><span class="icoSidebar fas fa-history"></span> ID Embarque</th>
@@ -130,7 +129,7 @@
                 </tbody>
             </table>
         </div>
-    </div>
+   
 </div>
 <% include ./static/footer %>
 </div>
@@ -140,6 +139,16 @@
 
 <script>
 
+
+    $('#myTabl2').dataTable( {
+            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
+            "order": [[ 0, "desc" ]]
+            
+          } )
+          $('#myTabl2').show()
+
+
+          
     let navegador
     navegador=window.navigator.platform
 
