--- a/views/embarques_status.ejs
+++ b/views/embarques_status.ejs
@@ -21,11 +21,9 @@
 
 </div>
 
-<div class="table-responsive">
-    <div class="containerTable">
-        <!-- /.box-header -->
-        <div class="table table-responsive" id="table">
-            <table id="myTable" class="table table-bordered table-striped table-sm">
+<div class="container-fluid">
+    <div class="table table-responsive" >
+        <table id="myTabl2" class="table table-bordered table-striped" style="display:none">
                 <thead class="thead-dark">
 
                     <th><span class="icoSidebar fas fa-history"></span> Revisar</th>
@@ -120,10 +118,25 @@
                 </tbody>
             </table>
         </div>
-    </div>
+   
 </div>
 <% include ./static/footer %>
 </div>
 </body>
 
 </html>
+
+
+<script>
+
+
+    $('#myTabl2').dataTable( {
+            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
+            "order": [[ 0, "desc" ]]
+            
+          } )
+          $('#myTabl2').show()
+
+
+
+</script>
