feat: :white_check_mark: Read Master FORD with new code
Read Master FORD with new code

--- a/views/capturar_embarque.ejs
+++ b/views/capturar_embarque.ejs
@@ -1240,7 +1240,7 @@ aria-hidden="true">
                         ///////////MASTER FORD///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-                    } else if (infoArray.length == 11 && infoArray[11].startsWith("S")) {//FORD
+                    } else if (infoArray.length == 11 && (infoArray[11].startsWith("S") || infoArray[11].startsWith("M"))) {//FORD
                         var partes
                         var qty
                         var serial
@@ -2076,7 +2076,7 @@ aria-hidden="true">
                         ///////////MASTER FORD///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-                    } else if (infoArray.length == 11 && infoArray[11].startsWith("S")) {//FORD
+                    } else if (infoArray.length == 11 && (infoArray[11].startsWith("S") || infoArray[11].startsWith("M"))) {//FORD
                         
                         var partes
                         var qty
